se configuran cors y se conecta fronted con backend para creacion de usuarios y recuperación de contraseña

--- a/Ejercicio 2/FrontEnd/client/frontEndEvaluacion/src/app/components/header-publico/header-publico.component.html
+++ b/Ejercicio 2/FrontEnd/client/frontEndEvaluacion/src/app/components/header-publico/header-publico.component.html
@@ -10,13 +10,13 @@
                     <a class="nav-link {{activeInicio}}" aria-current="page" href="inicio">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {{activeCrear}}" href="carga">Crear Usuario</a>
+                    <a class="nav-link {{activeCrear}}" href="crearUsuario">Crear Usuario</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {{activeRecuperar}}" href="carga">Recuperar Contraseña</a>
+                    <a class="nav-link {{activeRecuperar}}" href="recuperarPassword">Recuperar Contraseña</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {{activeLogIn}}" href="carga">LogIn</a>
+                    <a class="nav-link {{activeLogIn}}" href="login">LogIn</a>
                 </li>
             </ul>
         </div>
