--- a/Ejercicio 2/FrontEnd/client/frontEndEvaluacion/src/app/components/recuperar-password/recuperar-password.component.html
+++ b/Ejercicio 2/FrontEnd/client/frontEndEvaluacion/src/app/components/recuperar-password/recuperar-password.component.html
@@ -35,8 +35,8 @@
             </div>
             <div class="form-group row">
                 <div class="col-sm-6 mb-3 mb-sm-0">
-                    <label for="password">Nueva Contraseña *</label>
-                    <input [(ngModel)]="newpassword" name ="password" type="password" class="form-control " placeholder="Contraseña" required>
+                    <label for="newPassword">Nueva Contraseña *</label>
+                    <input [(ngModel)]="newPassword" name ="newPassword" type="password" class="form-control " placeholder="Contraseña" required>
                 </div>
                 <div class="col-sm-6 mb-3 mb-sm-0">
                     <label for="confirmPasword">Confirme Nueva Contraseña *</label>
